force-app/main/default/objects/ESS_Stationary__c.object
<CustomObject>
    <fields>
        <fullName>Accepted_By__c</fullName>
        <label>Accepted By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accepted_Comment__c</fullName>
        <label>Accepted Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accepted_Date__c</fullName>
        <label>Accepted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Administrator_Email__c</fullName>
        <label>Administrator Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administrator_Name__c</fullName>
        <label>Administrator Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <label>Approved By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Comment__c</fullName>
        <label>Approved Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Attachment_Files__c</fullName>
        <label>Attachment Files</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attentiveness_Rating_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attentiveness Rating 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attentiveness_Rating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attentiveness Rating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Email__c</fullName>
        <label>CC Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Level__c</fullName>
        <label>CC Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC__c</fullName>
        <label>CC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Comment__c</fullName>
        <label>Cancel Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_By__c</fullName>
        <label>Cancelled By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_Date__c</fullName>
        <label>Cancelled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_No__c</fullName>
        <label>Document No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expertise_Rating_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expertise Rating 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expertise_Rating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expertise Rating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fast_Rating_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Rating 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fast_Rating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Rating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_No__c</fullName>
        <label>Internal No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_PRTR_Requester__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is PRTR Requester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Updated_By__c</fullName>
        <formula>LastModifiedBy.FirstName_EN__c + &apos; &apos; +  LastModifiedBy.LastName_EN__c</formula>
        <label>Last Updated By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <label>Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <label>Mobile No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_Date__c</fullName>
        <label>Need Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Behalf Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Department__c</fullName>
        <label>On Behalf Of Department</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_EN__c</fullName>
        <label>On Behalf Of EN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Email__c</fullName>
        <label>On Behalf Of Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Employee_Id__c</fullName>
        <label>On Behalf Of Employee Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Behalf Of Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Function__c</fullName>
        <label>On Behalf Of Function</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Id__c</fullName>
        <label>On Behalf Of Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Level__c</fullName>
        <label>On Behalf Of Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Position__c</fullName>
        <label>On Behalf Of Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Section__c</fullName>
        <label>On Behalf Of Section</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Unit__c</fullName>
        <label>On Behalf Of Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Verifying__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Behalf Of Verifying</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of__c</fullName>
        <label>On Behalf Of</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Service_For__c</fullName>
        <label>Other Service For</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Comment__c</fullName>
        <label>PMSV Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMSV_Department__c</fullName>
        <label>PMSV Department</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Email__c</fullName>
        <label>PMSV Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Employee_Id__c</fullName>
        <label>PMSV Employee Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Function__c</fullName>
        <label>PMSV Function</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Id__c</fullName>
        <label>PMSV Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Position__c</fullName>
        <label>PMSV Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Section__c</fullName>
        <label>PMSV Section</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Unit__c</fullName>
        <label>PMSV Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV__c</fullName>
        <label>PMSV</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Punctuality_Rating_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Punctuality Rating 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Punctuality_Rating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Punctuality Rating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating_Date_2__c</fullName>
        <label>Rating Date 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rating_Date__c</fullName>
        <label>Rating Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rating_Score_2__c</fullName>
        <label>Rating Score 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating_Score__c</fullName>
        <label>Rating Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reject_Comment__c</fullName>
        <label>Reject Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rejected_By__c</fullName>
        <label>Rejected By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_Date__c</fullName>
        <label>Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requester_Department__c</fullName>
        <label>Requester Department</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Email__c</fullName>
        <label>Requester Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Employee_Id__c</fullName>
        <label>Requester Employee Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Function__c</fullName>
        <label>Requester Function</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Id__c</fullName>
        <label>Requester Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Level__c</fullName>
        <label>Requester Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Name_EN__c</fullName>
        <label>Requester Name EN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Name__c</fullName>
        <label>Requester Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Position__c</fullName>
        <label>Requester Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Section__c</fullName>
        <label>Requester Section</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Tel_Mobile__c</fullName>
        <label>Requester Tel Mobile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Tel_Office__c</fullName>
        <label>Requester Tel Office</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Unit__c</fullName>
        <label>Requester Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_For__c</fullName>
        <label>Service For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TOPTSR</fullName>
                    <label>TOP-TSR (ศรีราชา)</label>
                </value>
                <value>
                    <fullName>TOPTBK</fullName>
                    <label>TOP-TBK (กรุงเทพ)</label>
                </value>
                <value>
                    <fullName>TLB</fullName>
                </value>
                <value>
                    <fullName>TPX</fullName>
                </value>
                <value>
                    <fullName>TTC</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>TES</fullName>
                </value>
                <value>
                    <fullName>LABIX</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>อื่นๆ</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staff_Comment__c</fullName>
        <label>Staff Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>WaitingToApprove</fullName>
                    <label>To Be Approved</label>
                </value>
                <value>
                    <fullName>OnProcess</fullName>
                    <label>On Process</label>
                </value>
                <value>
                    <fullName>Verifying</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Other__c</fullName>
        <label>Total Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Stock__c</fullName>
        <label>Total Stock</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Manager_EN__c</fullName>
        <label>User Manager EN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Manager_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Manager Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Manager_Id__c</fullName>
        <label>User Manager Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Manager__c</fullName>
        <label>User Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_By__c</fullName>
        <label>Verified By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_Date__c</fullName>
        <label>Verified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Verify_Comment__c</fullName>
        <label>Verify Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Withdraw_From_Stock__c</fullName>
        <label>Withdraw From Stock</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Withdraw_From__c</fullName>
        <label>Withdraw From</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TSR</fullName>
                    <label>สำนักงานศรีราชา (TSR)</label>
                </value>
                <value>
                    <fullName>TBK</fullName>
                    <label>สำนักงานกรุงเทพ (TBK)</label>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Withdraw_Other__c</fullName>
        <label>Withdraw Other</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>ESS Stationary</label>
    <nameField>
        <displayFormat>STA-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>